Make Crop Tool handle Shift modifier to fix Aspect Ratio

BUG:328782